Changes with APR b1

  *) Change the ordering of the apr_lock implementation method to
     better match what's done in Apache 1.3. The ordering is
     now (highest to lowest): pthread -> sysvsem -> fcntl -> flock.
     [Jim Jagielski]

  *) Improve detection of the INT64_C macro to prevent problems
     with HP-UX's ANSI C compiler.  PR 8932.  [Justin Erenkrantz]

  *) Make sure gethostbyname() can handle 255.255.255.255 if we
     are to trust it to handle numeric address strings in
     apr_sockaddr_info_get().  This fixes a problem on HP-UX
     which led to an assertion failure at Apache startup when
     using vhosts.  [Jeff Trawick]

  *) Don't mask SIGUSR2 [Jin Hong <jinh@cnet.com>]  

  *) Load libraries if they not MH_BUNDLE, but if they are not, it 
     just attempts to link them as shared libs.
     [Pier Fumagalli <pier@betaversion.org>]

  *) apr_atomic_dec now returns a zero value if the value of 
     the atomic is zero, non-zero otherwise [Ian Holsman]

  *) When opening a file, only create an internal thread mutex
     if APR_XTHREAD is set.  [Brian Pane]

  *) Move the kill_conditions enum in apr_thread_proc.h into the
     APR namespace. kill_after_timeout et al have been renamed
     appropriately (e.g., APR_KILL_AFTER_TIMEOUT).  [Jeff Trawick]

  *) Fix a segfault in apr_thread_rwlock_destroy() on Win32.
     [INOUE Seiichiro <inoue@ariel-networks.com>]
  
  *) configure now checks to see if we can change DNS timeout values
     [Ian Holsman]

  *) Fix a bug in apr_file_seek() on Unix when using buffered
     files.  PR 10003 [Jeff Trawick]

  *) Small table performance optimization: eliminate the
     zero-fill of newly allocated elements when expanding
     a table's size. [Brian Pane]

  *) Allow APR to install its generated libtool(s) via the 
     --with-installbuilddir option (defaults to ${datadir}/build).
     [Justin Erenkrantz]

  *) renames: apr_ansi_time_to_apr_time becomes apr_time_ansi_put