@@ -135,6 +135,7 @@ dnl	       # Not a problem in 10.20.  Otherwise, who knows?
 		;;
 	esac
 	APR_SETIFNULL(enable_threads, [no])
+        APR_SETIFNULL(apr_lock_method, [USE_FLOCK_SERIALIZE])
 	APR_ADDTO(CPPFLAGS, [-D_REENTRANT -D_THREAD_SAFE])
 	;;
     *-next-nextstep*)
