@@ -1,5 +1,8 @@
 Changes with APR b1
 
+  *) Fix apr-config so that it will not attempt to cd to a non-existent
+     directory.  [Justin Erenkrantz]
+
   *) Change the ordering of the apr_lock implementation method to
      better match what's done in Apache 1.3. The ordering is
      now (highest to lowest): pthread -> sysvsem -> fcntl -> flock.
